--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
     "@sendbird/uikit-react": "^3.14.11",
+    "autoprefixer": "^10.4.19",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "next": "14.2.4",
+    "postcss": "^8.4.39",
     "prettier": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
-    "sendbird": "^3.1.33"
+    "sendbird": "^3.1.33",
+    "tailwindcss": "^3.4.5"
   },
   "devDependencies": {
+    "@types/node": "20.14.10",
+    "@types/react": "18.3.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
-    "eslint-plugin-react": "^7.34.3"
+    "eslint-plugin-react": "^7.34.3",
+    "typescript": "5.5.3"
   }
 }
